--- a/CSS/Publication.css
+++ b/CSS/Publication.css
@@ -65,3 +65,19 @@ white-space: nowrap; /* Empêche le texte de passer à la ligne */
     right: 20px;
    
 }
+.sidebar ul li a {
+    color: white !important;
+    display: flex;
+    align-items: center;
+    padding: 9px 13px;
+    text-decoration: none;
+    transition: 0.3s;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+        .sidebar ul li a:hover {
+    background-color: #ff5722;
+    transform: translateX(5px);
+  }
